synology/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: synology
  name: synology-service
  namespace: filesystem
subsets:
- addresses:
  - ip: 10.0.0.187
  ports:
  - name: synology
    port: 5000
    protocol: TCP
