synology/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: synology
  namespace: filesystem
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`punkrecords.monroe.gg`) || Host(`punkrecords.monroeshindelar.com`)
    services:
    - kind: Service
      name: synology-service
      namespace: filesystem
      port: 5000
  tls:
    certResolver: porkbun
